--- a/Backend/locale/te/LC_MESSAGES/django.po
+++ b/Backend/locale/te/LC_MESSAGES/django.po
@@ -9,55 +9,56 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-03 11:04+0530\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2020-08-03 13:10+0553\n"
+"Last-Translator: b'Anonymous User <me@sumitsingh.tech>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Translated-Using: django-rosetta 0.9.4\n"
 
 #: NidhiSanchar/settings.py:101
 msgid "English"
-msgstr ""
+msgstr "ఆంగ్ల"
 
 #: NidhiSanchar/settings.py:102
 msgid "Hindi"
-msgstr ""
+msgstr "హిందీ"
 
 #: NidhiSanchar/settings.py:103
 msgid "Telugu"
-msgstr ""
+msgstr "తెలుగు"
 
 #: NidhiSanchar/urls.py:26
 msgid "Applications | NidhiSanchar"
-msgstr ""
+msgstr "అప్లికేషన్స్ | ఫండింగ్"
 
 #: NidhiSanchar/urls.py:27 NidhiSanchar/urls.py:28
 msgid "NidhiSanchar"
-msgstr ""
+msgstr "ఫండింగ్"
 
 #: department/models.py:22 department/models.py:84 department/models.py:171
 msgid "Name of the Department"
-msgstr ""
+msgstr "విభాగం పేరు"
 
 #: department/models.py:23 department/models.py:66 department/models.py:85
 #: department/models.py:172
 msgid "Department Name"
-msgstr ""
+msgstr "శాఖ పేరు"
 
 #: department/models.py:67
 msgid "Department Names"
-msgstr ""
+msgstr "విభాగం పేర్లు"
 
 #: department/models.py:90 department/models.py:177
 msgid "Description of the Department"
-msgstr ""
+msgstr "విభాగం యొక్క వివరణ"
 
 #: department/models.py:93 department/models.py:180
 msgid "Point of Contact"
-msgstr ""
+msgstr "పాయింట్ ఆఫ్ కాంటాక్ట్"
 
 #: department/models.py:94 department/models.py:181
 msgid "Point of Contact from the Department"
@@ -330,8 +331,8 @@ msgstr ""
 
 #: drf_user/utils.py:317
 msgid ""
-"No pending OTP validation request found for provideddestination. Kindly send "
-"an OTP first"
+"No pending OTP validation request found for provideddestination. Kindly send"
+" an OTP first"
 msgstr ""
 
 #: drf_user/views.py:226 drf_user/views.py:348
@@ -439,7 +440,8 @@ msgid "Total Funds required for the Scheme(in cr.)"
 msgstr ""
 
 #: schemes/models.py:175
-msgid "Comments will be added by centre/state officials regarding this scheme."
+msgid ""
+"Comments will be added by centre/state officials regarding this scheme."
 msgstr ""
 
 #: schemes/models.py:185
